--- a/css/main.css
+++ b/css/main.css
@@ -268,3 +268,18 @@ header {
     width: 100%;
     height: 50%;
 }
+
+.test {
+    width:250px;
+    height: 100px;
+    text-align:center;
+    background-color: #ffffff;
+}
+
+.btn-findRoad {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    z-index: 999;
+    background-image: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/rv_close.png');
+}
