--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ header {
     justify-content: space-between;
 }
 
-.wrap-img {
+.wrap-img, .wrap-icon {
     width: 45%;
     display: flex;
     justify-content: center;
@@ -28,10 +28,11 @@ header {
 }
 
 .wrapper-icon {
-    width: 45%;
+    width: 120px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    margin: 10px;
 }
 
 .location {
@@ -39,7 +40,6 @@ header {
     background-size: contain;
     width: 29px;
     height: 29px;
-    margin: 7px;
 }
 
 .language {
@@ -47,13 +47,11 @@ header {
     background-size: contain;
     width: 30px;
     height: 30px;
-    margin: 7px;
 }
 
 .site-nav {
     width: 30px;
     height: 30px;
-    margin: 7px;
 }
 
 .nav-icon{
@@ -265,21 +263,35 @@ header {
 }
 
 .map-shop {
+    position: relative;
     width: 100%;
     height: 50%;
 }
 
-.test {
+.map {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.map-rv {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.info-window {
     width:250px;
     height: 100px;
     text-align:center;
     background-color: #ffffff;
 }
 
-.btn-findRoad {
+.btn-wrap {
     position: absolute;
-    width: 50px;
-    height: 50px;
-    z-index: 999;
-    background-image: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/rv_close.png');
+}
+
+.btn-rv, .btn-fr {
+    position: relative;
+    z-index: 20;
 }
