--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 header {
     display: flex;
     width: 100%;
@@ -43,7 +47,7 @@ header {
 }
 
 .language {
-    background-image: url('../img/language.png');
+    background-image: url('../img/phone_icon.png');
     background-size: contain;
     width: 30px;
     height: 30px;
@@ -99,6 +103,7 @@ header {
 
 .nav-content-wrapper, #nav-toggle {
     display: none;
+    z-index: 999;
 }
 
 #nav-toggle:checked ~ .nav-toggle-label > .nav-bar {
@@ -115,6 +120,25 @@ header {
     top: 0px;
 }
 
+@keyframes navOpen {
+    from {
+        height: 0%;
+    }
+    to {
+        height: 92vh;
+    }
+}
+
+@keyframes navContentOpen {
+    from {
+        opacity: 0;
+    }
+
+    to{
+        opacity: 1;
+    }
+}
+
 #nav-toggle:checked ~ .nav-content-wrapper {
     display: block;
     position: absolute;
@@ -123,7 +147,9 @@ header {
     width: 100%;
     height: 92vh;
     background-color: #ffffff;
-    opacity: 0.9;
+    opacity: 0.95;
+    z-index: 999;
+    animation: navOpen 1s ease-in alternate forwards;
 }
 
 .nav-content {
@@ -136,6 +162,7 @@ header {
     font-size: 15pt;
     color: #000000;
     border-bottom: 1px solid rgba(0, 0, 0, 0.8);
+    animation: navContentOpen 1s ease-in alternate;
 }
 
 .nav {
@@ -149,6 +176,14 @@ header {
     object-fit: cover;
     width: 100%;
     height: 100vh;
+}
+
+.main-video-dark {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #000000;
+    opacity: 0.3;
 }
 
 .sec-first {
@@ -165,8 +200,8 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    top: 8vh;
+    justify-content: space-between;
+    top: 0px;
     left: 0px;
     width: 100%;
     height: 100vh;
@@ -175,6 +210,207 @@ header {
 .intro-shop {
     font-size: 20px;
     color: #ffffff;
+    text-align: center;
+    font-weight: 900;
+    letter-spacing: 1px;
+}
+
+.intro-shop-desc {
+    font-size: 15px;
+    color: #ffffff;
+    text-align: center;
+    opacity: 0.8;
+}
+
+.intro-shop, .intro-shop-desc {
+    padding-top: 20px;
+}
+
+.empty-div, .intro-wrap, .btn-wrap-sec1 {
+    display: flex;
+    width: 100%;
+    height: calc(100% / 3);
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.btn-wrap-sec1 {
+    flex-direction: row;
+}
+
+.btn-sec1 {
+    margin: 20px;
+    width: 120px;
+    height: 40px;
+    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+    cursor: pointer;
+    border-radius: 24px;
+    padding: 10px;
+    border: 0px;
+    font-weight: 900;
+}
+
+.scroll-wrap {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    bottom: 0px;
+    animation: scrollEvent 1.5s ease-in-out infinite alternate;
+}
+
+.scroll {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    text-align: center;
+    border: 0px;
+    border-radius: 100px;
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    color: #000000;
+    font-weight: 100;
+}
+
+.art-first  > .scroll-wrap > .scroll{
+    color: #ffffff;
+}
+
+.scr-top {
+    bottom: 10px;
+}
+
+@keyframes scrollEvent {
+    from {
+        bottom: 0px;
+    }
+    to {
+        bottom: 15px;
+    }
+}
+
+.sv-sec {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+}
+
+.sv-art {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+}
+
+.service-wrap {
+    display: flex;
+    width: 100%;
+    height: calc(100% / 3);
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.service-wrap {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    height: 50%;
+}
+
+.service-info {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 30%;
+    top: 0px;
+}
+
+.service-name {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000000;
+    font-weight: 600;
+    letter-spacing: 5px;
+    font-size: 25px;
+    padding-top: 50px;
+}
+
+.move-img-wrap {
+    display: flex;
+    flex-direction: row;
+    width: calc(100% * 5);
+    height: 88%;
+}
+
+.move-img {
+    width: calc(100% / 5);
+    height: 100%;
+}
+
+.move-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.service-control {
+    display: flex;
+    justify-content: space-around;
+    width: 100px;
+    position: absolute;
+    bottom: 40px;
+    left: calc((100vw - 100px) / 2);
+}
+
+.btn-service {
+    width: 10px;
+    height: 10px;
+    border-radius: 100px;
+    border: 0px;
+    opacity: 0.8;
+    padding: 0px;
+}
+
+.btn-arrow-left, .btn-arrow-right {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    top: calc(((100vh / 3 * 0.88) + 100px) / 2);
+    background-color: rgba(255, 255, 255, 0);
+    border: 0px;
+    font-size: 40px;
+    color: rgba(255, 255, 255, .8);
+}
+
+.btn-arrow-right {
+    right: 0;
+}
+
+.btn-click {
+    background-color: #ffffff;
+}
+
+.btn-unclick {
+    background-color: #73777B;
 }
 
 .sec-second {
@@ -184,22 +420,24 @@ header {
     flex-direction: column;
     width: 100%;
     height: 100vh;
-    background-color: #ffffff;
-}
-
-.heading {
-    font-weight: bold;
-    font-size: 25px;
-    height: 50px;
 }
 
 .imgs-shop {
+    position: relative;
     display: flex;
     width: 100%;
-    height: 80%;
+    height: 100%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.heading {
+    position: absolute;
+    font-weight: bold;
+    font-size: 25px;
+    height: 50px;
+    top: calc(100vh / 5);
 }
 
 .shop-wrap {
@@ -209,6 +447,14 @@ header {
     align-items: center;
     width: 100%;
     height: 60vh;
+}
+
+.img-wrap > .img-shop-wrap {
+    height: 100%;
+}
+
+.shop-btn-control {
+    bottom: 20px;
 }
 
 .wrap-img-shop {
@@ -235,6 +481,16 @@ header {
     height: 100%;
 }
 
+.img-wrap {
+    overflow: hidden;
+    position: relative;
+}
+
+.shop-btn {
+    position: absolute;
+    top: calc((100% - 40px) / 2);
+}
+
 .sec-third {
     display: flex;
     justify-content: center;
@@ -242,30 +498,22 @@ header {
     flex-direction: column;
     width: 100%;
     height: 100vh;
-    background-color: #ffffff;
 }
 
 .art-third {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 80%;
-}
-
-.location-shop {
-    display: flex;
-    width: 300px;
-    height: 150px;
-    align-items: center;
-    justify-content: center;
+    height: 100%;
 }
 
 .map-shop {
     position: relative;
     width: 100%;
-    height: 50%;
+    height: 45%;
 }
 
 .map {
@@ -282,8 +530,11 @@ header {
 
 .info-window {
     width:250px;
-    height: 100px;
+    height: 150px;
     text-align:center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #ffffff;
 }
 
@@ -294,4 +545,26 @@ header {
 .btn-rv, .btn-fr {
     position: relative;
     z-index: 20;
+    margin-top: 10px;
+    left: 10px;
+    background-color: #ead5c7;
+    border: 0px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.footer {
+    display: flex;
+    width: 100%;
+    height: 10%;
+    align-items: center;
+    justify-content: center;
+    letter-spacing: 1px;
+    background-color: rgba(0, 0, 0, 0.5)
+}
+
+.footer-desc-wrap > p {
+    padding: 5px;
+    text-align: center;
+    color: #ffffff;
 }
